change title and background img

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     
         <div id="header">   
-        <h1><b>Life if Furparent</b></h1>
+        <h1><b>Life of a Gwapo</b></h1>
   </div>
   
         <div class="topnav">
@@ -17,7 +17,7 @@
       </div>
 
       <h2><b>My Cat</b></h2>
-      <img src="/images/Takki.gif" alt="cle" width="300px" height="250" />
+      <img src="/images/guel.jpg" alt="cle" width="300px" height="250" />
 
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis
