--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     
         <div id="header">   
-        <h1><b>Life of a Gwapo</b></h1>
+        <h1><b>Life of a Dog</b></h1>
   </div>
   
         <div class="topnav">
